crates/rspyts-macros/tests/ui/serde_skip.stderr
error: unsupported Serde attribute `skip` on this field; rspyts can reflect only `rename`. Use `rspyts::Json` for a deliberately schemaless custom wire contract
 --> tests/ui/serde_skip.rs:7:13
  |
7 |     #[serde(skip)]
  |             ^^^^
